# cubeapp

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  channels_entrypoint.sh  docker-compose.certbot.yml  docker-compose.override.yml  docker-compose.production.test.yml  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  frozen-external-requirements.txt  frozen-requirements.txt  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  todo  tsconfig.json  webpack.config.js  webpack.production.config.js
api/: boto.py  consumers.py  feeds.py  mail.py  models.py  routing.py  serializers.py  services.py  tasks.py  urls.py  utils.py  values.py  views.py
bookmail/: apps.py  models.py  tasks.py
cubeapp/: __init__.py  asgi.py  celery.py  celeryapp.py  routing.py  settings.py  urls.py  views.py  wsgi.py
cubespoiler/: apps.py  models.py  serialization.py  serializers.py  urls.py  views.py
draft/: apps.py  consumers.py  coordinator.py  draft.py  feeds.py  game.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
frontend/: urls.py  views.py
imgqty/: apps.py  models.py  serializers.py  service.py  tasks.py  urls.py  views.py
kpd/: apps.py  models.py  serializers.py  service.py  settings.py  tasks.py  urls.py  views.py
league/: apps.py  feeds.py  models.py  serializers.py  tasks.py  urls.py  utils.py  values.py  views.py
limited/: apps.py  models.py  options.py  serializers.py  urls.py  views.py
lobbies/: apps.py  consumers.py  exceptions.py  lobbies.py  routing.py
nginx/: production.conf  test.conf
rating/: calc.py  models.py  serializers.py  tasks.py  urls.py  values.py  views.py
resources/: staticdb.py  staticimageloader.py
sealed/: apps.py  formats.py  game.py  models.py  serializers.py  urls.py  views.py
statics/: apps.py  urls.py  views.py
suns/: apps.py  game.py
templates/: index.html  test.html
tournaments/: feeds.py  models.py  options.py  serializers.py  urls.py  views.py
utils/: boto.py  consumers.py  fields.py  methods.py  mixins.py  queue.py  values.py
weather/: models.py  (+3 more)
(+412 files in other folders)
